--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -1,25 +1,37 @@
-doctype html
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Noom
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body
-        header
-            h1 Noom
-        main
-            div#welcome
-                form    
-                    input(placeholder="room name", required, type="text")
-                    button Enter room
-            div#call
-                div#myStream
-                    video#myFace(autoplay,playsinline, width="400", height="400")
-                     button#mute Mute
-                     button#camera Turn Camera Off
-                     select#cameras
-                     video#peerFace(autoplay,playsinline, width="400", height="400")
-        script(src="/socket.io/socket.io.js")
-        script(src="/public/js/app.js")
+<!DOCTYPE html>
+<html lang="ko">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>내 손안의 화상통화</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css">
+  </head>
+  <body>
+    <header class="bg-green-600">
+      <h1 class="text-white text-center py-8 text-3xl">내 손안의 화상통화</h1>
+    </header>
+    <main class="py-8">
+      <div id="welcome" class="w-full max-w-5xl mx-auto">
+        <form class="flex flex-col items-center space-y-4">
+          <input class="border border-gray-300 rounded-lg p-2 w-full" placeholder="채팅방 코드 입력" required type="text">
+          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">입장하기</button>
+        </form>
+      </div>
+      <div id="call" class="w-full max-w-5xl mx-auto">
+        <div id="myStream" class="flex justify-center items-center flex-col space-y-4">
+          <video id="myFace" autoplay playsinline width="400" height="400"></video>
+          <div class="flex space-x-4">
+            <button id="mute" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">음소거</button>
+            <button id="camera" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">카메라 끄기</button>
+            <select id="cameras" class="border border-gray-300 rounded-lg p-2">
+            </select>
+          </div>
+          <video id="peerFace" autoplay playsinline width="400" height="400"></video>
+        </div>
+      </div>
+    </main>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/public/js/app.js"></script>
+  </body>
+</html>
