--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -6,24 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>내 손안의 화상통화</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
+
   </head>
-  <body>
-    <header class="bg-green-600">
-      <h1 class="text-white text-center py-8 text-3xl">내 손안의 화상통화</h1>
-    </header>
+    <body class="bg-white-600 font-[Poppins]">
+        <span class="absolute text-white text-4xl top-5 left-4 cursor-pointer" onclick="Openbar()">
+            <i class="bi bi-filter-left px-2 bg-gray-900 rounded-md"></i>
+        </span>
+    <div class="sidebar fixed top-0 bottom-0 lg:left-0 left-[-300px] p-2 w-[300px] overflow-y-auto text-center bg-gray-900">
+        <div class="text-gray-100 text-xl">
+        <div class="p-2.5 mt-1 flex items-center">
+            <i class="bi bi-app-indicator px-2 py-1 rounded-md"></i>
+            <h1 class="font-bold text-gray-200 text-[1]">내 손 안의 화상통화</h1>
+            <i class="bi bi-whatsapp ml-20 cursor-pointer lg:hidden" onclick="Openbar()"></i>
+        </div>
+        <hr class="my-2 text-gray-600">
+        </div>
+
+        <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+            <i class="bi bi-house-door-fill"></i>
+            <span class="text-[15px] ml-4 text-gray-200">메인화면</span>
+            </div>
+        
+        <div class="p-2.5 mt-3 flex items-center rounded-md px-4 duration-300 cursor-pointer hover:bg-blue-600 text-white">
+            <i class="bi bi-backspace-fill"></i>
+            <span class="text-[15px] ml-4 text-gray-200">채팅방으로 돌아가기</span>
+            </div>
+
+        </div>
+    </body>
+
     <main class="py-8">
       <div id="welcome" class="w-full max-w-5xl mx-auto">
         <form class="flex flex-col items-center space-y-4">
-          <input class="border border-gray-300 rounded-lg p-2 w-full" placeholder="채팅방 코드 입력" required type="text">
-          <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">입장하기</button>
+          <input class="border border-gray-300 rounded-lg p-2 w-1/3" placeholder="채팅방 코드 6자리 입력" required type="text">
+          <button class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded">입장하기</button>
         </form>
       </div>
       <div id="call" class="w-full max-w-5xl mx-auto">
         <div id="myStream" class="flex justify-center items-center flex-col space-y-4">
           <video id="myFace" autoplay playsinline width="400" height="400"></video>
           <div class="flex space-x-4">
-            <button id="mute" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">음소거</button>
-            <button id="camera" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">카메라 끄기</button>
+            <button id="mute" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-full">음소거</button>
+            <button id="camera" class="bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-full">카메라 끄기</button>
             <select id="cameras" class="border border-gray-300 rounded-lg p-2">
             </select>
           </div>
