--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -41,6 +41,7 @@
     </body>
 
     <main class="">
+    <title>내 손안의 화상통화</title>
       <div id="welcome" class=" w-full max-w-4xl mx-auto py-24">
       <i class="bi bi-person-badge flex justify-center py-10" style="font-size: 150px;"></i>
         <form class="flex flex-col items-center space-y-6">
